Only scroll the table body, pin the header - Split the data table in two, wrapping the body part in the "scrollbox" div - tweak styling to fix text overflow problems, number alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -481,13 +481,15 @@ th {
 	color: hsl(215, 40%, 50%);
 	border-bottom: 1px solid hsl(210, 25%, 80%);
 	padding: 6px;
-	text-align: left;
 	text-transform: uppercase;
 }
 th .unit { text-transform: none; }
 td {
 	padding: 4px 10px;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
+td.numeric { text-align: right; padding-right: 2ex; }
 
 tr+tr { border-top: 1px solid hsl(210, 20%, 87%); }
 
